# Uros

./: .gitignore  LICENSE  README.md  compile_commands.json
hello/: Makefile  Makefile.am  Makefile.in  Makerules  config.h  config.status  configure  configure.ac  hello.c  hello.h
hello/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
hello/conf/: Makeconf
osfmk/: ARCHITECTURE.md  BUILD.md  CMakeLists.txt  CMakePresets.json  CODEBASE_ANALYSIS.md
osfmk/export/include/: sa_mach.h
osfmk/export/include/char/: char_module_abi.h  char_types.h
osfmk/export/include/device/: device.defs
osfmk/export/include/gpu/: gpu_module_abi.h  gpu_types.h
osfmk/export/include/mach/: cap_revoke.defs  cap_server.defs  cap_types.h  char_server_types.h  gpu_server_types.h  mach_port.defs  mach_types.h  mig_errors.h  module_pool.h  syscall_sw.h
osfmk/export/include/sa_mach/: errno.h
osfmk/export/include/servers/: netname.defs  netname.h  netname_defs.h
osfmk/export/powermac/include/: mach_init.h  rthreads.h
osfmk/scripts/: generate_ode_headers.py
osfmk/src/: CMakeLists.txt
osfmk/src/ahci_driver/: CMakeLists.txt  ahci.h  ahci_batch.defs  ahci_batch_types.h  ahci_driver.c  nostdlib_stubs.c
osfmk/src/block_device_server/: CMakeLists.txt  block_device.c  block_partition.c  block_server.c  block_server.h  dl_loader.c  dl_loader.h  nostdlib_stubs.c  ssp_module_stub.c
osfmk/src/block_device_server/ahci/: ahci_io.c  ahci_module.c  ahci_module.h
osfmk/src/block_device_server/virtio_blk/: virtio.h  virtio_module.c  virtio_module.h
osfmk/src/bootstrap/: BUILD_NOTES.md  CMakeLists.txt  a_out.c  bootstrap.c  bootstrap.h  bundle.c  bundle.h  coff.c  device_read_overwrite.c  elf.c  elf.h  load.c  log_forwarder.c  log_forwarder.h  nostdlib_stubs.c  rose.c  service.c  som.c  strfcns.c
osfmk/src/bootstrap/HP700/: _start.c
osfmk/src/bootstrap/POWERMAC/: boot_dep.c  set_regs.c
osfmk/src/bootstrap/i386/: boot_dep.c  set_regs.c
osfmk/src/cap_server/: CMakeLists.txt  cap_server.c  cap_table.c  cap_table.h
osfmk/src/cap_test/: CMakeLists.txt  cap_test.c
osfmk/src/char_server/: CMakeLists.txt  char_mig.c  char_server.defs  char_server.h  core.c  main.c
osfmk/src/default_pager/: CMakeLists.txt  default_pager.c  default_pager_internal.h  diag.h  dp_backing_store.c  dp_memory_object.c  kalloc.c  nostdlib_stubs.c
osfmk/src/ext2_server/: CMakeLists.txt  ext2_server.c  ext2fs_server.defs  nostdlib_stubs.c
osfmk/src/ext_server/: CMakeLists.txt  ext2fs_server.defs  ext2fs_types.h  ext_server.c  nostdlib_stubs.c
osfmk/src/file_systems/: CMakeLists.txt  file_system.c  file_system.h  page_cache.c  page_cache.h
osfmk/src/file_systems/ext2fs/: ext2_fs.h  ext2fs.c  ext2fs.h
osfmk/src/file_systems/minixfs/: minixfs.c
osfmk/src/file_systems/ufs/: ufs.c
osfmk/src/gpu_server/: CMakeLists.txt  core.c  gpu_mig.c  gpu_server.defs  gpu_server.h  main.c  text_render.c
osfmk/src/gpu_server/modules/: vga.c
osfmk/src/hal_server/: CMakeLists.txt  hal.defs  hal_driver_reg.c  hal_mig.c  hal_notify.defs  hal_registry.c  hal_server.c  hal_server.h  nostdlib_stubs.c  ssp_module_stub.c
osfmk/src/hal_server/pci_scan/: pci_scan.c
osfmk/src/hello_server/: CMakeLists.txt  hello_server.c
osfmk/src/ipc_bench/: CMakeLists.txt  disk_bench.c  disk_bench.h  flipc2_bench.c  flipc2_bench.h  flipc2_bench_bufgroup.c  flipc2_bench_common.c  flipc2_bench_endpoint.c  flipc2_bench_game.c  flipc2_bench_inter.c  flipc2_bench_rpc.c  flipc2_bench_throughput.c  ipc_bench.c  mem_bench.c  mem_bench.h  nostdlib_stubs.c
osfmk/src/mach_kernel/: CMakeLists.txt
osfmk/src/mach_kernel/ddb/: db_command.c  db_examine.c  db_expr.c  db_ext_symtab.c  db_print.c  db_variables.c
osfmk/src/mach_kernel/device/: chario.c  device.defs  device_init.c  device_master.c  device_master.defs  device_master.h  device_server.h  device_server_stub.h  device_stubs.c  device_types.defs  dma_support.h  ds_routines.c  ds_routines.h  io_req.h  net_device.c  net_io.c
osfmk/src/mach_kernel/i386/: asm.h  cpuid.h  cswitch.S  db_disasm.c  db_interface.c  db_machdep.h  db_trace.c  disk.h  endian.h  fpe_linkage.c  fpu.c  fpu.h  gdt.c  genassym.c  hardclock.c  i386_rpc.c  interrupt.S  iobus.h  iopb.c  kmap.c  kmap.h  lock.h  locore.S  mp_desc.c  net_filter.c  pcb.c  phys.c  proc_reg.h  rtclock.c  seg.h  spl.S  start.S  sysenter.c  sysenter.h  thread_act.h  trap.c  trap.h
osfmk/src/mach_kernel/include/: string.h
osfmk/src/mach_kernel/intel/: pmap.c  pmap.h
osfmk/src/mach_kernel/ipc/: ipc_entry.c  ipc_kmsg.c  ipc_kmsg.h  ipc_mqueue.c  ipc_object.c  ipc_port.c  ipc_port.h  ipc_right.c  ipc_space.c  ipc_space.h  mach_msg.c  mach_msg.h  mach_port.c
osfmk/src/mach_kernel/kern/: bootstrap.c  cap.c  cap.h  clock.c  clock.h  counters.c  counters.h  cpu_data.h  cpu_number.h  exception.c  hmac_sha256.c  hmac_sha256.h  host.c  ipc_kobject.c  ipc_mig.c  kern_types.h  machine.c  posixtime.c  printf.c  processor.c  profile.h  rpc.c  sched_prim.c  sha256.c  sha256.h  sha256_shani.c  startup.c  syscall_emulation.c  syscall_subr.c  syscall_subr.h  syscall_sw.c  task.c  task.h  thread.c  thread.h  thread_act.c  thread_act.h  thread_swap.c  version.c  zalloc.c
osfmk/src/mach_kernel/mach/: boot_info.h  cap_types.h  clock.defs  clock_types.defs  elf.h  mach.defs  mach_host.defs  mach_port.defs  mach_types.defs  mach_types.defs.bak  memory_object.defs  memory_object_default.defs  message.h  std_types.defs  syscall_sw.h
osfmk/src/mach_kernel/mach_debug/: mach_debug.defs
osfmk/src/mach_kernel/profiling/: profile-md.h
osfmk/src/mach_kernel/vm/: memory_object.c  vm_fault.c  vm_init.c  vm_map.c  vm_object.c  vm_object.h  vm_page.h  vm_pageout.c  vm_resident.c
osfmk/src/mach_kernel/xmm/: xmm_user.c
osfmk/src/mach_services/include/: cthread_filter.h  flipc2.h  mach_error.h  math.h  rthread_filter.h  rthreads.h  sa_mach.h
osfmk/src/mach_services/lib/: CMakeLists.txt
osfmk/src/pthread_test/: CMakeLists.txt  pthread_test.c
osfmk/src/tools/mkbundle/: CMakeLists.txt  mkbundle.c
osfmk/src/virtio_blk/: CMakeLists.txt  virtio_blk.c
(+832 files in other folders)
